fix: Update margin properties in global.css for img, blockquote, and code elements to correct vertical spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,7 +70,7 @@ main {
   img,
   blockquote,
   code {
-    margin: 0 0.25rem;
+    margin: 0.25rem 0;
     line-height: 1.5;
   }
 
